<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/cardview_default_elevation"
    android:paddingLeft="@dimen/cardview_default_elevation"
    android:paddingRight="@dimen/cardview_default_elevation"
    android:paddingTop="@dimen/cardview_default_elevation">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:text="@string/details_title"
                android:textColor="@color/colorPrimary"
                android:textSize="24dp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/des"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/details"
                android:layout_margin="5dp"
                android:text="@string/description_title"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/des"
                android:layout_margin="5dp"
                android:text="@string/description" />


            <TextView
                android:id="@+id/tvValidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/tvDescription"
                android:layout_alignStart="@+id/tvDescription"
                android:layout_below="@+id/tvDescription"
                android:text="@string/expiry_date"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

            <HorizontalScrollView

                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_below="@+id/tvValidity"
                android:layout_margin="2dp"
                android:background="#FFFFFF">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0.5dp"
                    android:background="@color/header_background"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:padding="15dp"
                        android:src="@drawable/logo" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:padding="15dp"
                        android:src="@drawable/logo" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:padding="15dp"
                        android:src="@drawable/logo" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:padding="15dp"
                        android:src="@drawable/logo" />

                    <ImageView
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:padding="15dp"
                        android:src="@drawable/logo" />
                </LinearLayout>
            </HorizontalScrollView>


        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>