<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_marginLeft="1dp"
    android:layout_marginRight="1dp"
    android:background="@color/header_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/llPeople"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:orientation="vertical"
            android:paddingBottom="4dp"
            android:paddingTop="4dp">

            <ImageView
                android:id="@+id/iconPeople"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/titlePeople"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/people_header"
                android:textColor="@color/logoOrange"
                android:textSize="10dp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llprofessional"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:orientation="vertical"
            android:paddingBottom="4dp"
            android:paddingTop="4dp">

            <ImageView
                android:id="@+id/iconProfessional"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/titleProfessional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/professional_header"
                android:textColor="@color/colorPrimary"
                android:textSize="10dp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llService"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:orientation="vertical"
            android:paddingBottom="4dp"
            android:paddingTop="4dp">

            <ImageView
                android:id="@+id/iconService"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/titleService"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/service_header"
                android:textColor="@color/colorPrimary"
                android:textSize="10dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llProperty"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:orientation="vertical"
            android:paddingBottom="4dp"
            android:paddingTop="4dp">

            <ImageView
                android:id="@+id/iconProperty"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/titleProperty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/property_header"
                android:textColor="@color/colorPrimary"
                android:textSize="10dp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llBusiness"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:orientation="vertical"
            android:paddingBottom="4dp"
            android:paddingTop="4dp">

            <ImageView
                android:id="@+id/iconBusiness"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/titleBusiness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/business_header"
                android:textColor="@color/colorPrimary"
                android:textSize="10dp" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>