<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivSplashLogo"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/logoOrange"
        android:textSize="28dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvVersionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="16dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/version"
        android:textColor="@color/logoOrange"
        android:textSize="18dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/ivSplashLogo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/img_width_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:layout_marginTop="195dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/tvGreetings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="43dp"
        android:gravity="center"
        android:text="@string/greetings_of_the_day"
        android:textColor="@color/logoOrange"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tvInternetDetector"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@color/logoOrange"
        android:gravity="center_horizontal|center_vertical"
        android:text="Check Internet connection and refresh page"
        android:textColor="@color/white"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/ivRefresh"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_below="@+id/tvTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:src="@drawable/icon_refresh"
        android:visibility="gone" />

    <TextView
        android:text="refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_below="@+id/ivRefresh"
        android:visibility="gone"
        android:gravity="center"
        android:layout_alignLeft="@+id/ivRefresh"
        android:layout_alignStart="@+id/ivRefresh"
        android:id="@+id/tvRefresh"
        android:layout_alignRight="@+id/ivRefresh"
        android:layout_alignEnd="@+id/ivRefresh" />


</RelativeLayout>
