<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/scrolling_activity_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/rating"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvRating"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="28dp"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="4.5"
                android:textColor="@color/colorPrimary"
                android:visibility="gone" />

            <RatingBar
                android:id="@+id/ratingbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/text_margin"
                android:isIndicator="true"
                android:numStars="5"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:stepSize="0.1"
                android:theme="@style/RatingBar"
                android:transformPivotX="0dp"
                android:transformPivotY="33dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="12dp"
                android:text="@string/address_title"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginLeft="@dimen/text_margin"
                android:text="@string/address"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="12dp"
                android:text="@string/distance_title"
                android:textColor="@color/colorPrimary"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDistancee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/text_margin"
                android:text="@string/distance_in_kms"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:layout_margin="10dp">

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="360dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="12dp"
                android:background="@color/logoYellow"
                android:src="@drawable/navigation_icon"
                app:backgroundTint="@color/colorPrimary"
                app:elevation="12dp"
                app:fabSize="auto"
                app:layout_anchor="@id/app_bar"
                app:layout_anchorGravity="bottom|end"
                app:rippleColor="@color/main_color_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/layout_bg"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="©Listo"
                android:textColor="@color/colorPrimary"
                android:visibility="gone" />
        </RelativeLayout>


    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
