<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/cardview_default_elevation"
    android:paddingLeft="@dimen/cardview_default_elevation"
    android:paddingRight="@dimen/cardview_default_elevation"
    android:paddingTop="@dimen/cardview_default_elevation">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/header_background"
            android:padding="12dp">

            <TextView
                android:id="@+id/titleDate"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="Date" />

            <TextView
                android:id="@+id/titleName"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvDateTitle"
                android:layout_margin="2dp"
                android:text="@string/name_title" />

            <TextView
                android:id="@+id/tvDateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_marginRight="12dp"
                android:layout_toRightOf="@+id/titleDate"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/date_"
                android:textColor="@color/logoBlue" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvDateTitle"
                android:layout_margin="2dp"
                android:layout_toRightOf="@+id/titleName"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/title_name"
                android:textColor="@color/logoGreen" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/tvTime"
                android:text="Time" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/ivTracker"
                android:ellipsize="end"
                android:gravity="center"
                android:maxLines="1"
                android:paddingRight="5dp"
                android:text="14:22 pm"
                android:textColor="@color/logoBlue" />

            <ImageView
                android:id="@+id/ivTracker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:padding="5dp"
                android:src="@drawable/location_icon_orange_bg" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>