<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:paddingBottom="@dimen/cardview_default_elevation"
    android:paddingLeft="@dimen/cardview_default_elevation"
    android:paddingRight="@dimen/cardview_default_elevation"
    android:paddingTop="@dimen/cardview_default_elevation">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivCompanyLogo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:padding="8dp"
            android:src="@drawable/girl_sample_picture" />


        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_toEndOf="@+id/ivCompanyLogo"
            android:layout_toLeftOf="@+id/ivNavigation"
            android:layout_toRightOf="@+id/ivCompanyLogo"
            android:layout_toStartOf="@+id/ivNavigation"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/title_name"
            android:textColor="@color/black"
            android:textSize="12dp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvName"
            android:layout_toEndOf="@+id/ivCompanyLogo"
            android:layout_toLeftOf="@+id/ivNavigation"
            android:layout_toRightOf="@+id/ivCompanyLogo"
            android:layout_toStartOf="@+id/ivNavigation"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:maxLines="1"
            android:text="@string/title_company"
            android:textColor="@color/black"
            android:textSize="10dp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvDateTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvNotification"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/ivCompanyLogo"
            android:layout_toRightOf="@+id/ivCompanyLogo"
            android:text="@string/date_blocked"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvNotification"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/tvDateTitle"
            android:layout_toRightOf="@+id/tvDateTitle"
            android:text="12/12/2016"
            android:textSize="10dp" />

        <ImageView
            android:id="@+id/ivNavigation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="bottom|right"
            android:padding="24dp"
            android:src="@drawable/icon_unblock"></ImageView>

    </RelativeLayout>
</android.support.v7.widget.CardView></LinearLayout>